# CODA_pivot

./: .gitignore  CODApivot.py  CODApivot_Tab_1.py  CODApivot_bend.py  CODApivot_v0 - backup before advanced align.ui  CODApivot_v0 - backup remove lots of buttons.ui  CODApivot_v0.py  CODApivot_v0.ui  LICENSE  QuPath_downsample_and_save.groovy  README.md  pyproject.toml  requirements.txt
base/: CODApivot_bend.py  CODApivot_v0.py  CODApivot_v0.ui  __init__.py  application.py  convert_parquet_to_csv.py  convert_tsv_to_csv.py
base/utils/: convert_parquet_to_csv.py
