[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CODApivot"
version = "0.1.0"
description = "A GUI application for image registration and analysis."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

authors = [
    { name = "Ashley Kiemen", email = "kiemen@jhmi.edu" },
    { name = "Valentina Matos-Romero", email = "vmatosr1@jh.edu" }
]

keywords = ["medical imaging", "image registration"]

dependencies = [
    "opencv-python>=4.11.0.86",
    "scipy>=1.15.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "Pillow>=11.2.1",
    "matplotlib>=3.10.3",
    "scikit-image>=0.25.2",
    "PySide6>=6.9.1",
]

[project.scripts]
codapivot = "CODApivot:main"

[project.urls]
"Homepage" = "https://github.com/Kiemen-Lab/CODA_pivot"
"Bug Tracker" = "https://github.com/Kiemen-Lab/CODA_pivot.git/issues"